# sre-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT-CONTEXT.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.feedback-ci/: 0005eb420f.json  0009d91cec.json  000e858c37.json  00111790de.json  001358ba57.json  0014d14d19.json  00154d9b82.json  001a2a5481.json  001a78593d.json  001a893551.json  00269271b6.json  00301bd495.json  0030ede248.json  0033dd98ca.json  00388d7130.json  00390e9879.json  003e9f032b.json  003ec7b5be.json  003f4f6bfa.json  004bce4284.json  004c48949d.json  004d51815f.json  004d9a414a.json  004eb3b0f3.json  00503260b0.json  0054ecde56.json  0057e6d0bb.json  00607bf6eb.json  0060cb71ae.json  0062972bb7.json  006912ade1.json  00708e67c1.json  0074dffe44.json  007b1c21f3.json  007c1b509d.json  007cc03927.json  008329c903.json  00851e9696.json  00855a2680.json  008c11807e.json  (+20211 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  harness-autorunbook.yml  harness-calibration.yml  harness-winner.yml
dashboard/: app.js  app.py  index.html  requirements.txt  styles.css
demo-stack/: README.md  docker-compose.yml  loki-config.yaml  prometheus.yml
demo-stack/chaos-app/: Dockerfile  app.py  requirements.txt
demo-stack/scripts/: fire-alert.sh  generate-load.sh
docs/: index.html  ops-runbook.md  why-not.md
docs/adr/: 001-langgraph.md  002-sqlite-vs-postgres.md  003-bm25-no-vector-db.md  004-fallback-chain.md  005-synthetic-data.md  006-no-auto-execute.md  007-ensemble-via-threads.md  README.md
mocks/: scenarios.json
personas/: deploy-historian.md  hypothesis-gen.md  incident-pm.md  log-detective.md  metrics-analyst.md  remediation-sug.md  runbook-consultant.md  trace-reader.md
personas/variants/: log-detective-strict-citations.md  remediation-sug-low-risk-first.md
reports/: runbook-draft-2026-05-18.md  winner-2026-05-14.json  winner-2026-05-14.md  winner-2026-05-15.json  winner-2026-05-15.md  winner-2026-05-16.json  winner-2026-05-16.md  winner-2026-05-17.json  winner-2026-05-17.md  winner-2026-05-18.json  winner-2026-05-18.md  winner-2026-05-19.json  winner-2026-05-19.md  winner-2026-05-20.json  winner-2026-05-20.md  winner-2026-05-21.json  winner-2026-05-21.md
runbooks/: README.md  chaos-app.md  checkout-api.md
runbooks/general/: cascading-failures.md  connection-pool-exhaustion.md  false-positive-playbook.md
scripts/: demo-l6.sh  loadtest.py  run-autorunbook-job.py  run-calibration-job.py  run-winner-job.py  smoke.sh
src/sre_agent/: __init__.py  auth.py  autorunbook.py  cache.py  calibration.py  cli.py  concurrency.py  feedback.py  graph.py  harness.py  logging.py  metrics.py  observability.py  personas.py  ratelimit.py  retry.py  scale.py  schemas.py  seed.py  slack_actions.py  winner.py
src/sre_agent/models/: __init__.py  factory.py  fallback.py
src/sre_agent/nodes/: __init__.py  _helpers.py  deploy_historian.py  hypothesis_gen.py  incident_pm.py  log_detective.py  metrics_analyst.py  remediation_sug.py  runbook_consultant.py  trace_reader.py
src/sre_agent/notifications/: __init__.py  pagerduty.py  slack.py
src/sre_agent/providers/: __init__.py  _http.py  base.py  composite.py  datadog.py  loki.py  mock.py  prometheus.py
src/sre_agent/runbooks/: __init__.py  chunker.py  embedders.py  store.py
src/sre_agent/webhooks/: __init__.py  adapters.py
tests/: conftest.py  test_auth.py  test_autorunbook.py  test_cache.py  test_calibration.py  test_calibration_job.py  test_composite_provider.py  test_concurrency.py  test_dashboard.py  test_datadog_provider.py  test_eval.py  test_eval_drift_cli.py  test_eval_scoring.py  test_fallback.py  test_feedback.py  test_graph.py  test_harness.py  test_l5_integration.py  test_loki_provider.py  test_metrics.py  test_mock_provider.py  test_observability.py  test_pagerduty.py  test_personas_ab.py  test_prometheus_provider.py  test_providers_http.py  test_ratelimit.py  test_runbook_chunker.py  test_runbook_node.py  test_runbook_rag.py  test_runbook_store.py  test_scale.py  test_schemas.py  test_seed.py  test_slack_actions.py  test_slack_notifier.py  test_webhook_adapters.py  test_webhook_endpoint.py  test_winner.py
tests/eval/: README.md  __init__.py  baseline.json  runner.py  scoring.py
tests/eval/cases/: certificate-expiry.yaml  disk-full.yaml  dns-resolution-failure.yaml  downstream-cascade.yaml  false-positive.yaml  memory-leak-after-deploy.yaml  network-partition.yaml  rate-limit-throttling.yaml  redis-pool-exhaustion.yaml  slow-database-query.yaml
